Test add all links

--- a/_includes/featured-projects3.html
+++ b/_includes/featured-projects3.html
@@ -9,13 +9,23 @@
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">Personality</a>
+          <strong>Personality</strong>
         </div>
         <p>Personality is my first ever movie which secured a first place winning film among five competing films.
           <br> Personality is a psychological/horror short film.
-          I was the director, writer, editor and cameraman</p>
+          I was the director, writer, editor and cameraman.
+          <br>
+          <h3 class="intro__contact">
+              <span class="emoji pointer"></span>
+              <span>
+                <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank" class="highlight-link">Project</a>
+              </span>
+            </h3></p>
       </figcaption>
     </div>
+    <iframe width="420" height="315"
+      src="https://youtu.be/hY7nTo564k0?feature=shared">
+    </iframe>
 
     <div class="project blistabloc">
       <figure class="project__pic">
@@ -37,6 +47,9 @@
       <figure class="project__pic">
         <a href="{{site.baseurl}}/img/filmmaking/2.png" target="_blank">
           <img src="{{site.baseurl}}/img/filmmaking/2.png" alt="">
+          <iframe width="420" height="315"
+          src="https://youtu.be/ZXjyynoURW4">
+        </iframe>
         </a>
       </figure>
       <figcaption class="project__caption">
@@ -48,7 +61,6 @@
           I was the director, writer, editor and cameraman</p>
       </figcaption>
     </div>
-
 
     <div class="project screentime">
       <figure class="project__pic phones">
@@ -65,7 +77,15 @@
         <div class="project__name">
           <strong>Where The Worlds Meet</strong>
         </div>
-        <p>Where The Worlds Meet is an award-winning short story about the World Cup 2022.</p>
+        <p>Where The Worlds Meet is an award-winning short story about the World Cup 2022.
+          <br>
+            <h3 class="intro__contact">
+                <span class="emoji pointer"></span>
+                <span>
+                  <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank" class="highlight-link">Story</a>
+                </span>
+              </h3>
+        </p>
       </figcaption>
     </div>
 
