--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -63,13 +63,17 @@
             <strong>Minecraft Competition</strong>
           </div>
           <p>Designed and programmed a replica of the school building using minecraft.</p>
+          <h3 class="intro__contact">
+              <span class="emoji pointer"></span>
+              <span>
+                <a href="https://youtu.be/c7F1gHzV1jc?feature=shared" target="_blank" class="highlight-link">Project</a>
+              </span>
+            </h3>
         </figcaption>
       </div>
-
-      <video width="320" height="240" controls>
-          <source src="https://youtu.be/c7F1gHzV1jc?feature=shared" type="video/mp4">
-        Your browser does not support the video tag.
-        </video>
+      <iframe width="420" height="315"
+          src="https://youtu.be/c7F1gHzV1jc?feature=shared">
+      </iframe>
 
     <div class="project blistabloc">
         <figure class="project__pic">
@@ -82,26 +86,9 @@
             <strong>Marvel Pilot Program</strong>
           </div>
           <p>Learned a holistic approach to STEM learning and completed project one and two of the curriculum.
-          <br>
-
-          <h3 class="intro__contact">
-              <span class="emoji pointer"></span>
-              <span>
-                <a href="https://youtu.be/c7F1gHzV1jc?feature=shared" target="_blank" class="highlight-link">Project</a>
-              </span>
-            </h3>
           </p>
         </figcaption>
-
-        <video width="320" height="240" controls>
-            <source src="https://youtu.be/c7F1gHzV1jc?feature=shared" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
       </div>
-
-      <iframe width="420" height="315"
-src="https://www.youtube.com/embed/tgbNymZ7vqY">
-</iframe>
   
   </div>
 </section>
