--- a/_includes/featured-projects3.html
+++ b/_includes/featured-projects3.html
@@ -23,9 +23,7 @@
             </h3></p>
       </figcaption>
     </div>
-    <iframe width="420" height="315"
-      src="https://youtu.be/hY7nTo564k0?feature=shared">
-    </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/hY7nTo564k0?si=cTQN8SUfuqvGjF27" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
     <div class="project blistabloc">
       <figure class="project__pic">
@@ -46,10 +44,12 @@
     <div class="project blistabloc">
       <figure class="project__pic">
         <a href="{{site.baseurl}}/img/filmmaking/2.png" target="_blank">
+          <div class="phone">
           <img src="{{site.baseurl}}/img/filmmaking/2.png" alt="">
-          <iframe width="420" height="315"
-          src="https://youtu.be/ZXjyynoURW4">
-        </iframe>
+        </div>
+          <div class="phone">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/ZXjyynoURW4?si=qZBz82CxQfM4e2kD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
         </a>
       </figure>
       <figcaption class="project__caption">
