--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -66,13 +66,13 @@
           <h3 class="intro__contact">
               <span class="emoji pointer"></span>
               <span>
-                <a href="https://youtu.be/c7F1gHzV1jc?feature=shared" target="_blank" class="highlight-link">Project</a>
+                <a href="https://www.youtube.com/watch?v=c7F1gHzV1jc" target="_blank" class="highlight-link">Project</a>
               </span>
             </h3>
         </figcaption>
       </div>
       <iframe width="420" height="315"
-          src="https://youtu.be/c7F1gHzV1jc?feature=shared">
+          src="https://www.youtube.com/watch?v=c7F1gHzV1jc">
       </iframe>
 
     <div class="project blistabloc">
