--- a/_includes/featured-projects3.html
+++ b/_includes/featured-projects3.html
@@ -148,10 +148,10 @@
               <figure class="project__pic phones">
                 <a href="{{site.baseurl}}/img/filmmaking/2.png" target="_blank">
                   <div class="phone">
-                      <img width="374" src="{{site.baseurl}}/img/filmmaking/2.png" alt="">
+                      <iframe width="448" height="252" src="https://www.youtube.com/embed/ZXjyynoURW4?si=qZBz82CxQfM4e2kD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                   <div class="phone">
-                      <iframe width="374" height="210" src="https://www.youtube.com/embed/ZXjyynoURW4?si=qZBz82CxQfM4e2kD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <img width="300" src="{{site.baseurl}}/img/filmmaking/2.png" alt="">
                     </div>
                 </a>
               </figure>
@@ -171,7 +171,33 @@
               </figcaption>
             </div>
     
-
+            <div class="project screentime">
+                <figure class="project__pic phones">
+                  <a href="{{site.baseurl}}/img/filmmaking/2.png" target="_blank">
+                    <div class="phone">
+                        <img width="300" src="{{site.baseurl}}/img/filmmaking/2.png" alt="">
+                      </div>
+                    <div class="phone">
+                        <iframe width="448" height="252" src="https://www.youtube.com/embed/ZXjyynoURW4?si=qZBz82CxQfM4e2kD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      </div>
+                  </a>
+                </figure>
+                <figcaption class="project__caption">
+                  <div class="project__name">
+                    <strong>Ajyal 2.0</strong>
+                  </div>
+                  <p>Where The Worlds Meet is an award-winning short story about the World Cup 2022.
+                    <br>
+                      <h3 class="intro__contact">
+                          <span class="emoji pointer"></span>
+                          <span>
+                            <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank" class="highlight-link">Story</a>
+                          </span>
+                        </h3>
+                  </p>
+                </figcaption>
+              </div>
+      
           <div class="project screentime">
       <figure class="project__pic phones">
         <a href="{{site.baseurl}}/img/filmmaking/4.png" target="_blank">
