--- a/_includes/featured-projects3.html
+++ b/_includes/featured-projects3.html
@@ -148,7 +148,7 @@
               <figure class="project__pic phones">
                 <a href="{{site.baseurl}}/img/filmmaking/2.png" target="_blank">
                   <div class="phone">
-                      <iframe width="448" height="252" src="https://www.youtube.com/embed/ZXjyynoURW4?si=qZBz82CxQfM4e2kD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe src="https://www.youtube.com/embed/ZXjyynoURW4?si=qZBz82CxQfM4e2kD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                   <div class="phone">
                       <img src="{{site.baseurl}}/img/filmmaking/2.png" alt="">
@@ -202,14 +202,14 @@
                   <figure class="project__pic phones">
                     <a href="{{site.baseurl}}/img/filmmaking/2.png" target="_blank">
                       <div class="phone">
+                          <img width="50" src="" alt="">
+                        </div>
+                      <div class="phone">
                           <iframe width="448" height="252" src="https://www.youtube.com/embed/ZXjyynoURW4?si=qZBz82CxQfM4e2kD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
                         <div class="phone">
-                            <img width="350" src="{{site.baseurl}}/img/filmmaking/2.png" alt="">
+                            <img width="300" src="{{site.baseurl}}/img/filmmaking/2.png" alt="">
                           </div>
-                          <div class="phone">
-                              <img width="50" src="" alt="">
-                            </div>
                     </a>
                   </figure>
                   <figcaption class="project__caption">
