Add arrows for grades

--- a/_includes/featured-projects2.html
+++ b/_includes/featured-projects2.html
@@ -54,12 +54,12 @@
 
     <div class="project screentime">
         <figure class="project__pic phones">
-          <a href="{{site.baseurl}}/img/filmmaking/1.png" target="_blank">
+          <a href="{{site.baseurl}}/img/programming/minecraft.png" target="_blank">
             <div class="phone">
                 <iframe width="448" height="252" src="https://www.youtube.com/embed/c7F1gHzV1jc?si=S5QfmX0Guq1IbQIo&amp;start=8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
               <div class="phone">
-                  <img width="150" src="{{site.baseurl}}/img/filmmaking/1.png" alt="">
+                  <img width="350" src="{{site.baseurl}}/img/programming/minecraft.png" alt="">
                 </div>
           </a>
       </figure>
