--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -18,7 +18,7 @@
           <strong>Honors Certificates</strong>
         </div>      
 
-        <p>1- Certificate of Excellency for achieving <a href="{{site.baseurl}}/img/honors/honors/Grade10.png" target="_blank">97.12% in Grade 10</a>.
+        <p>1- Certificate of Excellency for achieving <a href="{{site.baseurl}}/img/honors/honors/Grade10.png" class="highlight-link" target="_blank">97.12% in Grade 10</a>.
         <br>2- and on the right is a Certificate of Excellency for achieving <a href="{{site.baseurl}}/img/honors/honors/Grade11.png" target="_blank">99.44% in Grade 11</a>.
         </p>
       </figcaption>
@@ -40,7 +40,7 @@
         </figure>
         <figcaption class="project__caption">
           <div class="project__name">
-            <strong>Extracurricular Certificates</strong>
+            <strong>School Extracurricular Certificates</strong>
           </div>
           <p>1- Overall <a href="{{site.baseurl}}/img/honors/more/1.png" target="_blank">excellent performance in grade 10</a>.
             <br>2- Received the top <a href="{{site.baseurl}}/img/honors/more/2.png" target="_blank">library visitor</a> as I used to borrow books throughout the year.
