Add others and update sections links

--- a/_includes/featured-projects3.html
+++ b/_includes/featured-projects3.html
@@ -1,30 +1,6 @@
 <section class="section featured-projects">
   <div class="section__title">Filmmaking</div>
   <div class="section__content">
-    <div class="project blistabloc">
-      <figure class="project__pic">
-        <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">
-          <img src="{{site.baseurl}}/img/filmmaking/personality.png" alt="">
-        </a>
-      </figure>
-      <figcaption class="project__caption">
-        <div class="project__name">
-          <strong>Personality</strong>
-        </div>
-        <p>Personality is my first ever movie which secured a first place winning film among five competing films.
-          <br> Personality is a psychological/horror short film.
-          I was the director, writer, editor and cameraman.
-          <br>
-          <h3 class="intro__contact">
-              <span class="emoji pointer"></span>
-              <span>
-                <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank" class="highlight-link">Project</a>
-              </span>
-            </h3></p>
-      </figcaption>
-    </div>
-
-
     <div class="project screentime">
         <figure class="project__pic phones">
           <a href="{{site.baseurl}}/img/filmmaking/1.png" target="_blank">
@@ -46,6 +22,29 @@
       </figcaption>
     </div>
 
+    <div class="project blistabloc">
+        <figure class="project__pic">
+          <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank">
+            <img src="{{site.baseurl}}/img/filmmaking/personality.png" alt="">
+          </a>
+        </figure>
+        <figcaption class="project__caption">
+          <div class="project__name">
+            <strong>Personality</strong>
+          </div>
+          <p>Personality is my first ever movie which secured a first place winning film among five competing films.
+            <br> Personality is a psychological/horror short film.
+            I was the director, writer, editor and cameraman.
+            <br>
+            <h3 class="intro__contact">
+                <span class="emoji pointer"></span>
+                <span>
+                  <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank" class="highlight-link">Watch Film</a>
+                </span>
+              </h3></p>
+        </figcaption>
+    </div>
+
     <div class="project screentime">
         <figure class="project__pic phones">
           <a href="{{site.baseurl}}/img/filmmaking/2.png" target="_blank">
@@ -59,16 +58,9 @@
         </figure>
         <figcaption class="project__caption">
           <div class="project__name">
-            <strong>Ajyal 2.0</strong>
+            <strong>Ajyal Film Festival Juror</strong>
           </div>
           <p>Where The Worlds Meet is an award-winning short story about the World Cup 2022.
-            <br>
-              <h3 class="intro__contact">
-                  <span class="emoji pointer"></span>
-                  <span>
-                    <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank" class="highlight-link">Story</a>
-                  </span>
-                </h3>
           </p>
         </figcaption>
     </div>
@@ -88,12 +80,12 @@
         <div class="project__name">
           <strong>Where The Worlds Meet</strong>
         </div>
-        <p>Where The Worlds Meet is an award-winning short story about the World Cup 2022.
+        <p>Where The Worlds Meet is an award-winning Arabic short story about the World Cup 2022.
           <br>
             <h3 class="intro__contact">
                 <span class="emoji pointer"></span>
                 <span>
-                  <a href="https://youtu.be/hY7nTo564k0?feature=shared" target="_blank" class="highlight-link">Story</a>
+                  <a href="{{site.baseurl}}/docs/3.3_motw.pdf" target="_blank" class="highlight-link">Read Story</a>
                 </span>
               </h3>
         </p>
@@ -109,22 +101,6 @@
       <figcaption class="project__caption">
         <div class="project__name">
           <strong>Theatre Actor</strong>
-        </div>
-        <p>Personality is my first ever movie which secured a first place winning film among five competing films.
-          <br> Personality is a psychological/horror short film.
-          I was the director, writer, editor and cameraman</p>
-      </figcaption>
-    </div>
-
-    <div class="project blistabloc">
-      <figure class="project__pic">
-        <a href="{{site.baseurl}}/img/filmmaking/6.png" target="_blank">
-          <img src="{{site.baseurl}}/img/filmmaking/6.png" alt="">
-        </a>
-      </figure>
-      <figcaption class="project__caption">
-        <div class="project__name">
-          <strong>Critical Reading</strong>
         </div>
         <p>Personality is my first ever movie which secured a first place winning film among five competing films.
           <br> Personality is a psychological/horror short film.
