--- a/_includes/background.html
+++ b/_includes/background.html
@@ -36,7 +36,9 @@
       <strong>Computer Science</strong> and <strong>Filmmaking</strong>, I love soaking up knowledge and often land top grades. 
     </p>
     <p>
-      I'm not just about coding; I dig into filmmaking, storytelling, and critiquing. I'm friendly but also a bit picky when it comes to my work. Team projects light me up, making tough stuff way easier. Whether coding or storytelling, I'm always curious, asking why and how. 
+      Immersed in the world of programming since a young age, I've always been curious about algorithmic puzzles and fascinated by transforming ideas into funtional solutions. 
+      I enthusiastically used every opportunity to strengthen my understanding and skill, from doodling Python programs in my schools computer labs, to building a ML-model. Fueled by a sincere thirst for knowledge, my academic pursuits in this field have been driven by certainty in its importance. 
+      I'm not just about programming; I also dig into filmmaking, storytelling, and critiquing. I'm friendly but also a bit picky when it comes to perfecting my work to produce elegant results. Team projects light me up, making tough stuff way easier. Whether coding or storytelling, I'm always curious, asking why and how. 
     </p>
     <p>
       Learning isn't just a skill; it's a habit, even in video games.    
