--- a/_includes/featured-projects3.html
+++ b/_includes/featured-projects3.html
@@ -16,9 +16,9 @@
         <div class="project__name">
           <strong>Filmmaking Course</strong>
         </div>
-        <p>Personality is my first ever movie which secured a first place winning film among five competing films.
-          <br> Personality is a psychological/horror short film.
-          I was the director, writer, editor and cameraman</p>
+        <p>Completed a filmmaking course with a focus on directing and production. Acquired knowledge of directing principles and techniques. 
+          Demonstrated a practical understanding of the directorial process, directing my first ever film.
+          </p>
       </figcaption>
     </div>
 
@@ -30,7 +30,7 @@
         </figure>
         <figcaption class="project__caption">
           <div class="project__name">
-            <strong>Personality</strong>
+            <strong>Personality Film</strong>
           </div>
           <p>Personality is my first ever movie which secured a first place winning film among five competing films.
             <br> Personality is a psychological/horror short film.
@@ -60,7 +60,8 @@
           <div class="project__name">
             <strong>Ajyal Film Festival Juror</strong>
           </div>
-          <p>Where The Worlds Meet is an award-winning short story about the World Cup 2022.
+          <p>I was selected to be a juror for the 10th AJYAL Festival by <strong>Doha Film Institute</strong>, a transformative experience that deepened my commitment to filmmaking.
+            <br>Engaged in critiquing films, interacting with directors, and participating in diverse narrative discussions, enhancing my storytelling insight and reinforcing the powerful influence of cinema on its audience.
           </p>
         </figcaption>
     </div>
@@ -80,7 +81,8 @@
         <div class="project__name">
           <strong>Where The Worlds Meet</strong>
         </div>
-        <p>Where The Worlds Meet is an award-winning Arabic short story about the World Cup 2022.
+        <p>Where The Worlds Meet is an Arabic short story that secured a top-three position
+            in a national storytelling competition organized by <strong>MATHAF - Arab Museum of Modern Art</strong>
           <br>
             <h3 class="intro__contact">
                 <span class="emoji pointer"></span>
@@ -102,9 +104,7 @@
         <div class="project__name">
           <strong>Theatre Actor</strong>
         </div>
-        <p>Personality is my first ever movie which secured a first place winning film among five competing films.
-          <br> Personality is a psychological/horror short film.
-          I was the director, writer, editor and cameraman</p>
+        <p>Took a part of a theater organized by <strong>Al-Faisal without borders</strong>. Learned the art of acting and gained a valuable experience.</p>
       </figcaption>
     </div>
 
