Update some text

--- a/_includes/featured-projects3.html
+++ b/_includes/featured-projects3.html
@@ -32,7 +32,7 @@
           <div class="project__name">
             <strong>Personality Film</strong>
           </div>
-          <p>Personality is my first ever movie which secured a first place winning film among five competing films.
+          <p>Personality is my first ever film which secured a first place among five competing films.
             <br> Personality is a psychological/horror short film.
             I was the director, writer, editor and cameraman.
             <br>
@@ -61,7 +61,7 @@
             <strong>Ajyal Film Festival Juror</strong>
           </div>
           <p>I was selected to be a juror for the 10th AJYAL Festival by <strong>Doha Film Institute</strong>, a transformative experience that deepened my commitment to filmmaking.
-            <br>Engaged in critiquing films, interacting with directors, and participating in diverse narrative discussions, enhancing my storytelling insight and reinforcing the powerful influence of cinema on its audience.
+            <br>Engaged in critiquing films, interacting with directors and participating.
           </p>
         </figcaption>
     </div>
