--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
   </h1>
 
   <h2 class="intro__tagline">I'm
-    <span class="name">Obai Anaya</span>, a film-loving programmer, filming by day, &amp; coding by dusk
+    <span class="name">Obai Anaya</span>, a film-loving programmer, filming by day &amp; coding by dusk
     <span class="emoji technologist"></span>
   </h2>
 
