--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,11 @@
 <footer class="footer">
   <div class="footer__copyright">
     <div class="top">
-      <span>Designed &amp; Developed by</span>
+      <span>Developed by Anaya</span>
+      <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
     </div>
     <div class="bottom">
-      <span>Brittany Chiang</span>
-      <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
-      <span>2018</span>
+      <span>Designed by Chiang</span>
     </div>
   </div>
   <div class="footer__links">
